[project]
name = "stepvideo"
description = "This repository contains ComfyUI custom nodes for StepVideo."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/stepfun-ai/ComfyUI-StepVideo"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-StepVideo"
Icon = ""
